add macos-latest-large to build matrix

--- a/.github/workflows/ppx-push.yaml
+++ b/.github/workflows/ppx-push.yaml
@@ -18,7 +18,7 @@ jobs:
     name: PPX Build Matrix
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [macos-latest, macos-latest-large, ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
